fixed icon spacing, fixed copyright

--- a/week01-html-css-git/homework/basic-portfolio/assets/css/style.css
+++ b/week01-html-css-git/homework/basic-portfolio/assets/css/style.css
@@ -114,11 +114,13 @@ p {
 	border-style: ridge;
 	width: 30px;
 	height: 30px;
-	padding: 14px;
+	padding: 10px;
+	margin: 2px 2px 2px 5px;
 }
 
 footer {
-	background-color: red;
+	color: white;
+	background-color: #d21034;
 	width: 100%;
 	line-height: 70px;
 	text-align: center;
